--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <input id="host_input" value="https://lstu.fusionsoft.ru/srv-elevator">
 <br>
 <button onclick="start_elevator()">Начать!</button>
+<p id="state_label">Состояние</p>
+<p id="weight_label">Вес</p>
 <div style="display: flex;">
 	<div id="buttons_list">
 
