--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <input id="host_input" value="https://lstu.fusionsoft.ru/srv-elevator">
 <br>
 <button onclick="start_elevator()">Начать!</button>
+
 <p id="state_label">Состояние</p>
 <p id="weight_label">Вес</p>
+<button id="enter_button" onclick="enter_passenger()" disabled>Войти</button>
+<button id="exit_button" onclick="exit_passenger()" disabled>Выйти</button>
 <div style="display: flex;">
 	<div id="buttons_list">
 
